tests/error/undefined_name.ca

f = {
    add(a b c)
}.block

int = make_stack()
int.stack_push(f [])
int.run
assert(int.errored)
